--- a/comandos_github.html
+++ b/comandos_github.html
@@ -1,4 +1,6 @@
 com o terminal na pasta onde estao os arquivos do git, execute os seguintes comandos:
+git config --global user.name "Fulano de Tal"     - cofigura o usuario
+git config --global user.email fulanodetal@exemplo.br     - configura o email
 git add .   - adiciona todas as alterações de todos os arquivos
 git commit -m "algum comentario"      - criar uma versao do codigo
 git push origin main     - envia as alterações pra nuvem (github)
