add result button

--- a/Jokenpo/index.html
+++ b/Jokenpo/index.html
@@ -20,6 +20,6 @@
   <button type="button" onclick="jogar(3)">Tesoura</button><br>
   <label id="escolhajogador" name=""></label><br>
   <label id="escolhapc" name=""></label><br>
-  <label id="resultado" name=""></label><br>
+  <button type="button" id="resultado" onclick="mostraResultado(this.value)">Ver Resultado</button><br>
 </body>
 </html>
