--- a/exemplo_loja/index.html
+++ b/exemplo_loja/index.html
@@ -17,8 +17,12 @@
       do Bootstrap, só não vale copiar tudo
       <i class="bi bi-emoji-wink" style="color: rgb(248, 192, 6);"></i>
     </h1>
+    <button type="button" onclick="mostraValores()">Atualizar</button>
+
     <div class="row row-cols-3 justify-content-around" id="grid"></div>
+
   </div>
 </body>
-<script src="codigo.js"></script>
+<script src="codigo.js">
+</script>
 </html>
