add go to register

--- a/exemplo_loja/index.html
+++ b/exemplo_loja/index.html
@@ -21,6 +21,7 @@
 
     <div class="row row-cols-3 justify-content-around" id="grid"></div>
 
+    <button onclick="location.href='cadastro.html'">Cadastro</button>
   </div>
 </body>
 <script src="codigo.js">
